# digiexpress-parent

./: .editorconfig  .gitignore  OSSRH-ticket  README.md  README_BEGIN_HERE.md  README_PREREQUISITES.md  README_RUNNING_APP.md  README_THENA.md  README_TROUBLESHOOTING.md  pom.xml
.github/workflows/: build-ui.yml  cicd-build-prod.yml  cicd-build.yml  codeql-analysis.yml  digiexpress-codeql-analysis.yml  digiexpress-mvn-tag-and-release.yaml  digiexpress-parent-prod.yml  eveli-release.yml  gamut-release.yml  tag-and-release.yaml
__deprecated/: MigrationSupport.java
__deprecated/bazel_setup/: .bazelrc  .gitignore  README.MD  WORKSPACE
__deprecated/bazel_setup/typescript-projects/apps/demo-burger-app/: BUILD.bazel
__deprecated/bazel_setup/typescript-projects/apps/demo-burger-app/src/: BUILD.bazel
__deprecated/dialob-composer-core/: .gitignore  tsconfig.json
__deprecated/docs/: README_TASKS_PARENT.md
__deprecated/hdes-composer-ui/: pom.xml
__deprecated/hdes-quarkus/: pom.xml
__deprecated/hdes-spring-env/: pom.xml
__deprecated/stencil-composer-integration/: pom.xml
__deprecated/stencil-dev-tools/: pom.xml
__deprecated/the-stencil-portal/: tsconfig.json
__migration/: .gitignore  add_mvn_repo.sh  add_repo.sh  group_id_rename.sh  migrated.txt  readme.md
_experiments/: rules_python.bzl
_experiments/bazel-migrations/: readme.md
_experiments/bazel-react-scripts/: .bazelrc  WORKSPACE
_experiments/bazel-ts-monorepo/: .yarnrc.yml  WORKSPACE
_experiments/digiexpress-monorepo_exp/: .bazelrc  WORKSPACE
_experiments/ts-parent/: .pnp.cjs  WORKSPACE  package.json
bazel-migrations/: .bazelrc  MODULE.bazel  WORKSPACE  maven_install.json  readme.md
bazel-migrations/digiexpress-client-api/: BUILD
bazel-migrations/digiexpress-client-api/src/main/java/io/digiexpress/client/api/: ClientStore.java
bazel-migrations/digiexpress-client-api/src/main/java/io/digiexpress/client/spi/: ParserImpl.java  TenantBuilderImpl.java
bazel-migrations/digiexpress-client-api/src/main/java/io/digiexpress/client/spi/composer/: CreateRevisionVisitor.java
bazel-migrations/digiexpress-client-api/src/main/java/io/digiexpress/client/spi/composer/commands/: GetProjectTags.java
bazel-migrations/digiexpress-client-api/src/main/java/io/digiexpress/client/spi/store/: DocDBConfig.java
bazel-migrations/digiexpress-client-api/src/main/java/io/digiexpress/client/spi/support/: EnvirException.java  QueryException.java
bazel-migrations/digiexpress-client-api/src/test/java/io/digiexpress/client/tests/migration/: StencilMigration.java
bazel-migrations/digiexpress-client-api/src/test/resources/: deps.txt
bazel-migrations/java-parent/digiexpress-client-api/: BUILD
bazel-migrations/java-parent/digiexpress-client-api/src/main/java/io/digiexpress/client/api/: ProjectTags.java
bazel-migrations/java-parent/digiexpress-client-api/src/main/java/io/digiexpress/client/spi/query/: GetHdesTag.java
bazel-migrations/java-parent/digiexpress-client-api/src/main/java/io/digiexpress/client/spi/store/: DocDBCommandsSupport.java
bazel-migrations/java-parent/digiexpress-client-api/src/main/java/io/digiexpress/client/spi/support/: ConstraintException.java
bazel-migrations/java-parent/digiexpress-client-api/src/test/resources/test_cases/case_1/: case_1_content.json
bazel-migrations/tools/yarn/: index.bzl  terser_config.json  yarn_setup.bzl
bazel-migrations/ts-parent/: .pnp.cjs  tsconfig.json
bazel-migrations/ts-parent/app/: BUILD.bazel
bazel-migrations/ts-parent/common/: BUILD.bazel
bazel-react-scripts/ts-parent/: .yarnrc.yml  package-lock.json
bazel-ts-monorepo/: WORKSPACE
bazel_setup/: .bazelignore
bazel_setup/typescript-projects/: pnpm-lock.yaml  tsconfig.json
bazel_setup/typescript-projects/apps/react-cra-example/: BUILD.bazel
bazel_setup/typescript-projects/apps/react-cra-example/src/: App.tsx  BUILD.bazel
bom/: pom.xml
build-parent/: pom.xml
composer/: pom.xml
composer-ui/: craco.config.js  package.json  tsconfig.json
composer/composer-ui/: package.json
core/: pom.xml
core/client-api/: pom.xml
dev/: readme.md
dev/spring-app/: pom.xml
dialob-composer-ui/: pom.xml
digiexpress-bom/: pom.xml
digiexpress-build-parent/: pom.xml  release.sh
digiexpress-composer/: pom.xml
digiexpress-composer/digiexpress-composer-spring/: pom.xml
digiexpress-composer/digiexpress-composer-ui/: package.json  pom.xml
digiexpress-core/: pom.xml
digiexpress-core/digiexpress-client-api/: pom.xml
digiexpress-dev/: pom.xml
digiexpress-dev/spring-app/: pom.xml
digiexpress-monorepo/: WORKSPACE
digiexpress-monorepo/ts-parent/: BUILD  package.json  tsconfig.json
docs/: README_ACCESS_MGMT.md  README_BUG_REPORT.md  README_CONTRIBUTION_GUIDELINES.md  README_DB_OPS.md  README_DIALOB.md  README_PREREQUISITES.md  README_RUNNING_APP.md  README_STENCIL.md  README_THENA.md  README_WRENCH.md
extensions/: pom.xml
extensions/app-spring/: pom.xml
extensions/composer-spring/: pom.xml
monorepo/: WORKSPACE
monorepo/ts-parent/: BUILD.bazel  package.json
monorepo/ts-parent/apps/react-cra-example/: BUILD.bazel  package.json
monorepo/ts-parent/apps/react-cra-example/src/: App.tsx  BUILD.bazel  reportWebVitals.ts  super.tsx
monorepo/ts-parent/src/: BUILD.bazel  super.tsx
mvn_setup/: .editorconfig  .gitignore  .sdkmanrc  README.md  docker-compose.yml  pom.xml
mvn_setup/alpha-version/: .sdkmanrc  README.md  docker-compose.yml
mvn_setup/bom/: pom.xml
mvn_setup/build-parent/: pom.xml  release.sh
mvn_setup/dialob-api/: .project
mvn_setup/dialob-parent/: pom.xml
mvn_setup/digiexpress-app/: README.md  pom.xml
mvn_setup/hdes-parent/: pom.xml
mvn_setup/portal-parent/: pom.xml
mvn_setup/process-parent/: pom.xml
mvn_setup/prod-version/: .sdkmanrc  pom.xml  reame.md
mvn_setup/stencil-parent/: pom.xml
report-coverage/: pom.xml
working-java-example/: .bazelrc  .sdkmanrc  WORKSPACE  package.json
working-ts-example/: .bazelignore
working-ts-example/ts-parent/: BUILD.bazel  package.json  pnpm-lock.yaml
working-ts-example/ts-parent/src/: App.tsx  reportWebVitals.ts
(+5951 files in other folders)
