load("@aspect_rules_js//js:defs.bzl", "js_library", "js_run_devserver", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//ts-parent:react-scripts/package_json.bzl", cra_bin = "bin")
load("@npm//:defs.bzl", "npm_link_all_packages")

# link all dependencies from root package.json
npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)



CRA_DEPS = [
    "//ts-parent/src",
    "//ts-parent/public",
    "//ts-parent:package.json",
    ":node_modules/eslint-config-react-app",
    ":node_modules/react-dom",
    ":node_modules/react-scripts",
    ":node_modules/react",
    ":node_modules/typescript",
    ":node_modules/web-vitals",
]

cra_bin.react_scripts(
    # Note: If you want to change the name make sure you update BUILD_PATH below accordingly
    # https://create-react-app.dev/docs/advanced-configuration/
    name = "build",
    
    args = ["build/ts-parent"],
    srcs = CRA_DEPS,
    env = {"BUILD_PATH": "./build/ts-parent"},
    out_dirs = ["build/ts-parent"],
)


js_run_devserver(
    name = "start",
    args = ["start"],
    chdir = package_name(),
    command = "node_modules/.bin/react-scripts", # inside chdir -> node modules
    data = CRA_DEPS,
)


js_library(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)