load("@aspect_rules_js//js:defs.bzl", "js_library", "js_run_devserver", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//typescript-projects:react-scripts/package_json.bzl", cra_bin = "bin")
load("//typescript-projects/tools:ts_deps.bzl", "MUI_DEPS")




CRA_DEPS = MUI_DEPS + [
    "//typescript-projects:node_modules/@digiexpress/react-burger",
    "//typescript-projects/apps/demo-burger-app/src",
    "//typescript-projects/apps/demo-burger-app/public",
    "//typescript-projects/apps/demo-burger-app:package.json",
    
    "//typescript-projects:node_modules/eslint-config-react-app",
    "//typescript-projects:node_modules/react-scripts",
    "//typescript-projects:node_modules/typescript",
    "//typescript-projects:node_modules/web-vitals",
]

cra_bin.react_scripts(
    # Note: If you want to change the name make sure you update BUILD_PATH below accordingly
    # https://create-react-app.dev/docs/advanced-configuration/
    name = "build",
    
    args = ["build/typescript-projects"],
    srcs = CRA_DEPS,
    env = {"BUILD_PATH": "./build/typescript-projects"},
    out_dirs = ["build/typescript-projects"],
)


js_run_devserver(
    name = "start",
    args = ["start"],
    chdir = package_name(),
    command = "../../node_modules/.bin/react-scripts", # inside chdir -> node modules
    data = CRA_DEPS,
)

js_library(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)