load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:eslint/package_json.bzl", eslint_bin = "bin")

ASSET_PATTERNS = [
    "*.svg",
    "*.css",
]

SRC_PATTERNS = [
    "*.tsx",
    "*.ts",
]

js_library(
    name = "src",
    srcs = glob(ASSET_PATTERNS),
    visibility = ["//visibility:public"],
    deps = [
        ":src_ts",
    ],
)

ts_project(
    name = "src_ts",
    srcs = glob(
        include = SRC_PATTERNS,
    ),
    declaration = True,
    resolve_json_module = True,
    tsconfig = "//typescript-projects:tsconfig",
    deps = [
        "//typescript-projects:node_modules/@digiexpress/first",
        "//typescript-projects:node_modules/react",
        "//typescript-projects:node_modules/react-dom",
        "//typescript-projects:node_modules/web-vitals",
    ],
)


eslint_bin.eslint_test(
    name = "eslint_test",
    args = ["{}/{}".format(
        package_name(),
        p,
    ) for p in SRC_PATTERNS],
    data = [
        "//typescript-projects/apps/react-cra-example:package_json",
        "//typescript-projects:node_modules/eslint-config-react-app",
    ] + glob(SRC_PATTERNS),
)
